--- a/brat_to_inception.ipynb
+++ b/brat_to_inception.ipynb
@@ -154,6 +154,7 @@
      "output_type": "stream",
      "text": [
       "CATAFLAM.3.txt\n",
+      "[(21, 30), (65, 70)]\n",
       "ARTHROTEC.112.txt\n"
      ]
     }
@@ -162,6 +163,11 @@
     "files = [i for i in os.listdir(entry_folder) if \".txt\" in i]\n",
     "\n",
     "def do_anno(_ann, _cas, _type):\n",
+    "\n",
+    "    if _type == \"tail\":\n",
+    "        _cas.add(ADR(begin=_ann.span[1][0], end=_ann.span[1][1], Label=ann.type))\n",
+    "        return\n",
+    "\n",
     "    if len(_ann.attributes) == 0: # no attribute\n",
     "        _cas.add(ADR(begin=_ann.span[0][0], end=_ann.span[0][1], Label=_type))\n",
     "    else:\n",
@@ -170,7 +176,8 @@
     "                begin=_ann.span[0][0],\n",
     "                end=_ann.span[0][1],\n",
     "                Label=_type,\n",
-    "                Time=atr.value))\n",
+    "                Time=atr.value)) #TODO\n",
+    "\n",
     "\n",
     "with open(type_file, \"rb\") as f:\n",
     "    ts = load_typesystem(f)\n",
@@ -200,44 +207,31 @@
     "    annotations = BratParser(os.path.join(entry_folder, file.replace(\"txt\", \"ann\")))\n",
     "\n",
     "    for ann in annotations.entities:\n",
+    "        do_anno(ann, cas, ann.type)\n",
+    "        id_relations[ann.id] = ann_num # add the id of the token to annotate the relation\n",
+    "        ann_num = ann_num + 1\n",
+    "        if len(ann.relations) != 0:\n",
+    "            all_relations.extend(ann.relations) # add relation\n",
     "\n",
     "\n",
-    "        if ann.type == \"timex3\":\n",
-    "            do_anno(ann, cas, \"time\")\n",
-    "            id_relations[ann.id] = ann_num # add the id of the token to annotate the relation\n",
-    "            ann_num = ann_num + 1\n",
-    "            if len(ann.relations) != 0:\n",
-    "                all_relations.extend(ann.relations) # add relation\n",
-    "\n",
-    "        elif ann.type == \"drug\":\n",
-    "            do_anno(ann, cas, \"drug\")\n",
-    "            id_relations[ann.id] = ann_num\n",
-    "            ann_num = ann_num + 1\n",
-    "            if len(ann.relations) != 0:\n",
-    "                all_relations.extend(ann.relations)\n",
-    "\n",
-    "        elif ann.type == \"disorder\":\n",
-    "            do_anno(ann, cas, \"disorder\")\n",
-    "            id_relations[ann.id] = ann_num\n",
-    "            ann_num = ann_num + 1\n",
-    "            if len(ann.relations) != 0:\n",
-    "                all_relations.extend(ann.relations)\n",
-    "\n",
-    "        elif ann.type == \"evaluation\":\n",
-    "            do_anno(ann, cas, \"evaluation\")\n",
-    "            id_relations[ann.id] = ann_num\n",
-    "            ann_num = ann_num + 1\n",
-    "            if len(ann.relations) != 0:\n",
-    "                all_relations.extend(ann.relations)\n",
-    "\n",
-    "        else:\n",
-    "            do_anno(ann, cas, ann.type)\n",
-    "            id_relations[ann.id] = ann_num\n",
+    "    for ann in annotations.entities:\n",
+    "        if len(ann.span) > 1:\n",
+    "            print(ann.span)\n",
+    "            do_anno(ann, cas, \"tail\")\n",
+    "            id_relations[str(ann.id) + \"-tail\"] = ann_num # add the id of the token to annotate the relation\n",
     "            ann_num = ann_num + 1\n",
     "\n",
+    "            cas.add(\n",
+    "            ADR_REL(\n",
+    "                Dependent=id_relations[ann.id],\n",
+    "                Governor=id_relations[str(ann.id) + \"-tail\"],\n",
+    "                relation=\"discount.\",\n",
+    "            )\n",
+    "        )\n",
     "\n",
     "\n",
     "    unique_relations = []\n",
+    "\n",
     "    for i in all_relations: # get only the unique relations\n",
     "        if i.id not in [o.id for o in unique_relations]:\n",
     "            unique_relations.append(i)\n",
@@ -261,6 +255,15 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
